# tic-tac-toe-model

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
airflow/dags/: train_tic_tac_model_dag.py
src/etl/: process_tic_tac_toe_results.py
src/machine_learning/: build_model.py  eda.ipynb  model_selection.ipynb
